fixed width issues on mobile on the back to top btn

--- a/portfolio/src/styles/contact.sass
+++ b/portfolio/src/styles/contact.sass
@@ -57,7 +57,8 @@
             font-size: 1rem
             cursor: pointer
             @media #{$tablet}
-                font-size: 0.8rem
+                // font-size: 0.8rem
+                height: 7vh
                 width: 50%
     @media #{$tablet}
         .form, .form-message
